mengubah deskripsi about us

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
       <section id="about">
         <h2>About Us</h2>
-        <p>We are a company that specializes in providing high-quality services to our customers.</p>
+        <p>We are a company that is working on a better future.</p>
       </section>
       <section id="services">
         <h2>Our Services</h2>
